refactor: numeric features (integer, float) can be used