@@ -6,11 +6,13 @@ import de.featjar.base.FeatJAR;
 import de.featjar.base.data.Attribute;
 import de.featjar.base.data.IAttribute;
 import de.featjar.base.tree.Trees;
+import de.featjar.formula.structure.Expressions;
 import de.featjar.formula.structure.IFormula;
 import de.featjar.formula.structure.connective.And;
 import de.featjar.formula.structure.connective.Implies;
 import de.featjar.formula.structure.predicate.LessThan;
 import de.featjar.formula.structure.predicate.Literal;
+import de.featjar.formula.structure.predicate.NotEquals;
 import de.featjar.formula.structure.term.aggregate.AttributeAverage;
 import de.featjar.formula.structure.term.aggregate.AttributeSum;
 import de.featjar.formula.structure.term.function.IfThenElse;
@@ -27,7 +29,7 @@ import org.junit.jupiter.api.Test;
 
 public class ReplaceAttributeAggregateTest {
 
-    private static Map<Variable, Map<IAttribute<?>, Object>> attributes;
+    private static Map<IFormula, Map<IAttribute<?>, Object>> attributes;
 
     @BeforeAll
     public static void init() {
@@ -35,50 +37,75 @@ public class ReplaceAttributeAggregateTest {
 
         attributes = new LinkedHashMap<>();
         attributes.put(
-                new Variable("cpu", Boolean.class),
+                Expressions.literal("cpu"),
                 Map.of(
                         new Attribute<>("cost", Long.class),
                         10L,
                         new Attribute<>("required", Boolean.class),
                         true,
                         new Attribute<>("power", Float.class),
-                        104.5f));
+                        104.5f
+                )
+        );
         attributes.put(
-                new Variable("gpu", Boolean.class),
+                Expressions.literal("gpu"),
                 Map.of(
                         new Attribute<>("cost", Long.class),
                         100L,
                         new Attribute<>("required", Boolean.class),
                         false,
                         new Attribute<>("power", Float.class),
-                        200.5f));
+                        200.5f
+                )
+        );
         attributes.put(
-                new Variable("ram", Boolean.class),
-                Map.of(new Attribute<>("cost", Long.class), 20L, new Attribute<>("required", Boolean.class), true));
+                Expressions.literal("ram"),
+                Map.of(
+                        new Attribute<>("cost", Long.class),
+                        20L,
+                        new Attribute<>("required", Boolean.class),
+                        true
+                )
+        );
         attributes.put(
-                new Variable("motherboard", Boolean.class),
-                Map.of(new Attribute<>("required", Boolean.class), true, new Attribute<>("power", Float.class), 3.5f));
-        attributes.put(new Variable("power_supply", Boolean.class), Collections.emptyMap());
+                Expressions.literal("motherboard"),
+                Map.of(
+                        new Attribute<>("required", Boolean.class),
+                        true,
+                        new Attribute<>("power", Float.class),
+                        3.5f
+                )
+        );
+        attributes.put(Expressions.literal("power_supply"), Collections.emptyMap());
+        attributes.put(
+                new NotEquals(new Variable("refreshrate", Double.class), new Constant(0.0)),
+                Map.of(
+                        new Attribute<>("required", Boolean.class),
+                        true,
+                        new Attribute<>("power", Float.class),
+                        1.0f
+                )
+        );
     }
 
     @Test
     public void test1() {
         IFormula test = new LessThan(new AttributeSum("cost"), new Constant(200L, Long.class));
-        ReplaceAttributeAggregate replaceAttributeAggregate = new ReplaceAttributeAggregate(attributes, Boolean.FALSE);
+        ReplaceAttributeAggregate replaceAttributeAggregate = new ReplaceAttributeAggregate(attributes, false);
         Trees.traverse(test, replaceAttributeAggregate);
 
         IFormula comparison = new LessThan(
                 new IntegerAdd(
                         new IfThenElse(
-                                new Variable("cpu", Boolean.class),
+                                new Literal("cpu"),
                                 new Constant(10L, Long.class),
                                 new Constant(0L, Long.class)),
                         new IfThenElse(
-                                new Variable("gpu", Boolean.class),
+                                new Literal("gpu"),
                                 new Constant(100L, Long.class),
                                 new Constant(0L, Long.class)),
                         new IfThenElse(
-                                new Variable("ram", Boolean.class),
+                                new Literal("ram"),
                                 new Constant(20L, Long.class),
                                 new Constant(0L, Long.class))),
                 new Constant(200L, Long.class));
@@ -89,50 +116,61 @@ public class ReplaceAttributeAggregateTest {
     @Test
     public void test2() {
         IFormula test = new LessThan(new AttributeSum("cost"), new AttributeAverage("power"));
-        ReplaceAttributeAggregate replaceAttributeAggregate = new ReplaceAttributeAggregate(attributes, Boolean.FALSE);
+        ReplaceAttributeAggregate replaceAttributeAggregate = new ReplaceAttributeAggregate(attributes, false);
         Trees.traverse(test, replaceAttributeAggregate);
 
         IFormula comparison = new LessThan(
                 new IntegerAdd(
                         new IfThenElse(
-                                new Variable("cpu", Boolean.class),
+                                new Literal("cpu"),
                                 new Constant(10L, Long.class),
                                 new Constant(0L, Long.class)),
                         new IfThenElse(
-                                new Variable("gpu", Boolean.class),
+                                new Literal("gpu"),
                                 new Constant(100L, Long.class),
                                 new Constant(0L, Long.class)),
                         new IfThenElse(
-                                new Variable("ram", Boolean.class),
+                                new Literal("ram"),
                                 new Constant(20L, Long.class),
                                 new Constant(0L, Long.class))),
                 new RealDivide(
                         new RealAdd(
                                 new IfThenElse(
-                                        new Variable("cpu", Boolean.class),
+                                        new Literal("cpu"),
                                         new Constant(104.5, Double.class),
                                         new Constant(0.0, Double.class)),
                                 new IfThenElse(
-                                        new Variable("gpu", Boolean.class),
+                                        new Literal("gpu"),
                                         new Constant(200.5, Double.class),
                                         new Constant(0.0, Double.class)),
                                 new IfThenElse(
-                                        new Variable("motherboard", Boolean.class),
+                                        new Literal("motherboard"),
                                         new Constant(3.5, Double.class),
-                                        new Constant(0.0, Double.class))),
+                                        new Constant(0.0, Double.class)),
+                                new IfThenElse(
+                                        new NotEquals(new Variable("refreshrate", Double.class), new Constant(0.0)),
+                                        new Constant(1.0, Double.class),
+                                        new Constant(0.0, Double.class))
+                        ),
                         new RealAdd(
                                 new IfThenElse(
-                                        new Variable("cpu", Boolean.class),
+                                        new Literal("cpu"),
                                         new Constant(1.0, Double.class),
                                         new Constant(0.0, Double.class)),
                                 new IfThenElse(
-                                        new Variable("gpu", Boolean.class),
+                                        new Literal("gpu"),
                                         new Constant(1.0, Double.class),
                                         new Constant(0.0, Double.class)),
                                 new IfThenElse(
-                                        new Variable("motherboard", Boolean.class),
+                                        new Literal("motherboard"),
                                         new Constant(1.0, Double.class),
-                                        new Constant(0.0, Double.class)))));
+                                        new Constant(0.0, Double.class)),
+                                new IfThenElse(
+                                        new NotEquals(new Variable("refreshrate", Double.class), new Constant(0.0)),
+                                        new Constant(1.0, Double.class),
+                                        new Constant(0.0, Double.class))
+                        )
+                ));
 
         assertTrue(test.equalsTree(comparison));
     }
@@ -143,7 +181,7 @@ public class ReplaceAttributeAggregateTest {
                 new Implies(
                         new Literal("cables"), new LessThan(new AttributeSum("cost"), new Constant(200L, Long.class))),
                 new Literal("case"));
-        ReplaceAttributeAggregate replaceAttributeAggregate = new ReplaceAttributeAggregate(attributes, Boolean.FALSE);
+        ReplaceAttributeAggregate replaceAttributeAggregate = new ReplaceAttributeAggregate(attributes, false);
         Trees.traverse(test, replaceAttributeAggregate);
 
         IFormula comparison = new And(
@@ -152,15 +190,15 @@ public class ReplaceAttributeAggregateTest {
                         new LessThan(
                                 new IntegerAdd(
                                         new IfThenElse(
-                                                new Variable("cpu", Boolean.class),
+                                                new Literal("cpu"),
                                                 new Constant(10L, Long.class),
                                                 new Constant(0L, Long.class)),
                                         new IfThenElse(
-                                                new Variable("gpu", Boolean.class),
+                                                new Literal("gpu"),
                                                 new Constant(100L, Long.class),
                                                 new Constant(0L, Long.class)),
                                         new IfThenElse(
-                                                new Variable("ram", Boolean.class),
+                                                new Literal("ram"),
                                                 new Constant(20L, Long.class),
                                                 new Constant(0L, Long.class))),
                                 new Constant(200L, Long.class))),
